Added quantity handling to wishlist button and fixed EJS syntax for wishlist button data-id

--- a/views/bookPage.ejs
+++ b/views/bookPage.ejs
@@ -60,7 +60,7 @@
                   <button id="quantity-increase"> + </button>
                </div>
                <button class="button-primary" id="addToCart" data-id="<%= book._id %>"> Add to Cart </button>
-               <button class="button-primary" id="wishlist" data-id="<% book._id %>"> Add to Wishlist </button>
+               <button class="button-primary" id="wishlist" data-id="<%= book._id %>"> Add to Wishlist </button>
             </div>
          </div>
 
