Implement search functionality with suggestions, search page paramas need to be implemented

--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -7,8 +7,8 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="styles/global.css">
-   <link rel="stylesheet" href="styles/landingPage.css">
+   <link rel="stylesheet" href="/styles/global.css">
+   <link rel="stylesheet" href="/styles/landingPage.css">
    <script>
       const savedTheme = localStorage.getItem('theme') || 'light-mode';
       document.documentElement.classList.add(savedTheme);
@@ -39,7 +39,7 @@
    <main>
       <section class="hero-section">
          <div>
-            <img src="assets/images/placeholder.png" alt="Hero Image">
+            <img src="/assets/images/placeholder.png" alt="Hero Image">
          </div>
          <div>
             <h1 class="h-big">
@@ -49,34 +49,34 @@
             <div class="hero-search">
                <div class="search-input">
                   <input type="text" placeholder="Search for books" class="input-search">
-                  <img src="assets/svg/search.svg" alt="Search Icon" class="icon">
+                  <img src="/assets/svg/search.svg" alt="Search Icon" class="icon">
                </div>
                <button class="button-primary">Search</button>
             </div>
          </div>
          <div>
-            <img src="assets/images/placeholder.png" alt="Hero Image">
+            <img src="/assets/images/placeholder.png" alt="Hero Image">
          </div>
       </section>
 
       <section class="dropdown-section">
          <button id="dropdown-first">
             <p class="p-big"> How BookHaven works </p>
-            <img src="assets/svg/arrow-down.svg" alt="Arrow Down" class="icon">
+            <img src="/assets/svg/arrow-down.svg" alt="Arrow Down" class="icon">
          </button>
          <div class="dropdown-content-first">
             <div>
-               <img src="assets/images/placeholder.png" alt="Placeholder Image">
+               <img src="/assets/images/placeholder.png" alt="Placeholder Image">
                <h3 class="h-medium"> Step 1 </h3>
                <p class="p-medium"> Enter book title or author. Find your next literary adventure with ease.</p>
             </div>
             <div>
-               <img src="assets/images/placeholder.png" alt="Placeholder Image">
+               <img src="/assets/images/placeholder.png" alt="Placeholder Image">
                <h3 class="h-medium"> Step 2 </h3>
                <p class="p-medium"> Select a book and add it to your cart. You're one step closer to diving into a new story. </p>
             </div>
             <div>
-               <img src="assets/images/placeholder.png" alt="Placeholder Image">
+               <img src="/assets/images/placeholder.png" alt="Placeholder Image">
                <h3 class="h-medium"> Step 3 </h3>
                <p class="p-medium"> Complete your purchase. Sit back and wait for your books to arive.</p>
             </div>
@@ -86,11 +86,11 @@
       <section class="dropdown-section">
          <button id="dropdown-second">
             <p class="p-big"> Join BookHaven </p>
-            <img src="assets/svg/arrow-down.svg" alt="Arrow Down" class="icon">
+            <img src="/assets/svg/arrow-down.svg" alt="Arrow Down" class="icon">
          </button>
          <div class="dropdown-content-second">
             <div>
-               <img src="assets/images/placeholder.png" alt="Placeholder Image">
+               <img src="/assets/images/placeholder.png" alt="Placeholder Image">
                <div>
                   <h3 class="h-medium"> As a delivery </h3>
                   <p class="p-medium"> Earn money by delivering books to readers. All you need is a love for books and mode of transport. </p>
@@ -98,7 +98,7 @@
                </div>
             </div>
             <div>
-               <img src="assets/images/placeholder.png" alt="Placeholder Image">
+               <img src="/assets/images/placeholder.png" alt="Placeholder Image">
                <div>
                   <h3 class="h-medium"> As a partner </h3>
                   <p class="p-medium"> BookHaven supports authors and publishers with online sales, promotions and more. </p>
@@ -106,7 +106,7 @@
                </div>
             </div>
             <div>
-               <img src="assets/images/placeholder.png" alt="Placeholder Image">
+               <img src="/assets/images/placeholder.png" alt="Placeholder Image">
                <div>
                   <h3 class="h-medium"> As a team </h3>
                   <p class="p-medium"> Join a team dedicated to providing top-notch book delivery services. </p>
@@ -119,7 +119,7 @@
       <section class="dropdown-section">
          <button id="dropdown-third">
             <p class="p-big"> Get our app now </p>
-            <img src="assets/svg/arrow-down.svg" alt="Arrow Down" class="icon">
+            <img src="/assets/svg/arrow-down.svg" alt="Arrow Down" class="icon">
          </button>
          <div class="dropdown-content-third">
             <div>
@@ -127,7 +127,7 @@
                <p class="p-medium"> Explore a world of books delivered to your doorstep with BookHaven. Our swift delivery services offer books across genres from top authors.</p>
                <button class="button-primary p-medium"> Download </button>
             </div>
-            <img src="assets/images/placeholder.png" alt="Placeholder Image">
+            <img src="/assets/images/placeholder.png" alt="Placeholder Image">
          </div>
       </section>
    </main>
