--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -143,6 +143,8 @@ a {
 }
 
 .search-input {
+   position: relative;
+   z-index: 3;
    background-color: var(--primary-color);
    color: var(--text-color);
    width: 100%;
@@ -232,10 +234,22 @@ footer > div {
    height: 3rem;
 
    border-radius: 50%;
+   background-color: var(--accent-color);
+   display: grid;
+   place-items: center;
+   text-transform: uppercase;
 }
 
 .header > #theme-toggle {
    border-radius: 50%;
+}
+
+.not-logged > ul  {
+   gap: 1rem !important;
+}
+
+.not-logged > ul > li:first-child {
+   margin-right: 1rem;
 }
 
 .header > div > .not-logged .button-primary:not(#theme-toggle) {
@@ -260,6 +274,7 @@ footer > div {
    align-items: center;
    gap: 2rem;
    list-style: none;
+   position: relative;
 }
 
 .header .search-input {
@@ -285,7 +300,7 @@ footer > div {
    transition: opacity .3s ease;
 }
 
-.header a:hover, .header a:active, .profile-button:hover, .profile-button:active {
+.header a:hover, .header a:active {
    opacity: 0.6;
 }
 
@@ -567,10 +582,115 @@ footer > div {
 
 .stars-inner img,
 .stars-outer img {
-   width: 1.5rem; /* Adjust the size as needed */
-   height: 1.5rem; /* Adjust the size as needed */
+   width: 1.5rem;
+   height: 1.5rem; 
 }
 
 .stars-outer {
    opacity: .4;
+}
+
+.profile-button:hover + .user-menu-popup,
+.user-menu-popup:hover {
+   visibility: visible;
+   opacity: 1;
+}
+
+.user-menu-popup {
+   opacity: 0;
+   position: absolute;
+   visibility: hidden;
+   top: 4rem;
+   right: -1rem;
+   z-index: 1;
+
+   background-color: var(--accent-color);
+   border-radius: .75rem;
+   padding: .5rem 0;
+   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+   transition: opacity .3s ease, visibility .3s ease; 
+}
+
+.user-menu-popup::after {
+   content: '';
+   position: absolute;
+   top: -1rem;
+   right: 2rem;
+   border: .5rem solid transparent;
+   border-bottom-color: var(--accent-color);
+}
+
+.user-menu-popup > a {
+   display: block;
+   padding: .25rem 1rem;
+   transition: opacity .3s ease;
+}
+
+.user-menu-popup > .spacer {
+   height: 1px;
+   width: 100%;
+   margin: .25rem 0;
+   background-color: var(--text-color-secondary);
+}
+
+.user-menu-popup > a > img {
+   width: 2rem;
+   height: 2rem;
+}
+
+.search-results {
+   visibility: hidden;
+   position: absolute;
+   width: 100%;
+   background-color: var(--secondary-color);
+   margin-top: .5rem;
+   top: 100%;
+   left: 0;
+   border-radius: .5rem;
+   list-style: none;
+   gap: .5rem;
+   opacity: 0;
+
+   transition: opacity .3s ease;
+}
+
+.search-results.visible {
+   opacity: 1;
+   visibility: visible !important;
+}
+
+.search-results > a:first-child  {
+   border-top-left-radius: .5rem;
+   border-top-right-radius: .5rem;
+}
+
+.search-results > a:last-child  {
+   border-bottom-left-radius: .5rem;
+   border-bottom-right-radius: .5rem;
+}
+
+.search-results > a {
+   display: flex;
+   padding: .5rem 1rem;
+   transition: background-color .3s ease;
+}  
+
+.search-results > a:hover {
+   opacity: 1;
+   background-color: var(--accent-color);
+}
+
+.search-results >  a .book-title {
+   font-weight: 600;
+}
+
+.search-results > a .book-author {
+   font-size: .75rem;
+   color: var(--text-color-secondary);
+}
+
+.search-results > a img {
+   width: 2.5rem;
+   height: 2.5rem;
+   border-radius: .25rem;
 }
