--- a/views/bookPage.ejs
+++ b/views/bookPage.ejs
@@ -120,6 +120,7 @@
       </section>
    </main>
    
+   <%- include('partials/notifications') %>
    <%- include('partials/footer') %>
    <script src="/scripts/bookPage.js"></script>
    <script src="/scripts/theme-toggle.js"></script>
