--- a/views/landingPage.ejs
+++ b/views/landingPage.ejs
@@ -132,6 +132,7 @@
       </section>
    </main>
    
+   <%- include('partials/notifications') %>   
    <%- include('partials/footer') %>
 
    <script src="/scripts/landingPage.js"></script>
