--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -90,6 +90,7 @@
       </section>
    </main>
    
+   <%- include('partials/notifications') %>
    <%- include('partials/footer') %>
    <script src="/scripts/signUpPage.js"></script>
    <script src="/scripts/theme-toggle.js"></script>
