--- a/views/explorePage.ejs
+++ b/views/explorePage.ejs
@@ -106,6 +106,7 @@
 
    </main>
    
+   <%- include('partials/notifications') %>
    <%- include('partials/footer') %>
    <script src="/scripts/theme-toggle.js"></script>
    <script src="/scripts/explorePage.js"></script>
