--- a/views/searchPage.ejs
+++ b/views/searchPage.ejs
@@ -151,6 +151,7 @@
       </section>
    </main>
    
+   <%- include('partials/notifications') %>   
    <%- include('partials/footer') %>
    <script src="/scripts/searchPage.js"></script>
    <script src="/scripts/theme-toggle.js"></script>
