--- a/views/signInPage.ejs
+++ b/views/signInPage.ejs
@@ -78,7 +78,7 @@
           </form>
       </section>
    </main>
-   
+   <%- include('partials/notifications') %>
    <%- include('partials/footer') %>
    <script src="/scripts/signInPage.js"></script>
    <script src="/scripts/theme-toggle.js"></script>
