Added user profile page with displaying order history and settings form with updating avatar

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,11 +45,11 @@
                   <img src="/assets/svg/profile.svg" alt="user icon" class="icon">
                   <span> Profile </span>
                </a>
-               <a href="/orders"> 
+               <a href="/profile#orders"> 
                   <img src= "/assets/svg/orders.svg" alt="orders icon" class="icon">
                   <span> Orders  </span>
                </a>
-               <a href="/settings"> 
+               <a href="/profile#settings"> 
                   <img src="/assets/svg/settings.svg" alt="settings icon" class="icon">   
                   <span> Settings </span>
                 </a>
