--- a/views/cartPage.ejs
+++ b/views/cartPage.ejs
@@ -105,7 +105,7 @@
       </section>
    </main>
    
-   <%- include('partials/notification') %>
+   <%- include('partials/notifications') %>
    <%- include('partials/footer') %>
    <script src="/scripts/cartPage.js"></script>
    <script src="/scripts/theme-toggle.js"></script>
