Added service files for all db operations, added icon to page, fixed minor issues

--- a/views/bookPage.ejs
+++ b/views/bookPage.ejs
@@ -9,6 +9,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="/styles/global.css">
    <link rel="stylesheet" href="/styles/bookPage.css">
+   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
    <script>
       const savedTheme = localStorage.getItem('theme') || 'light-mode';
       document.documentElement.classList.add(savedTheme);
