--- a/views/wishlistPage.ejs
+++ b/views/wishlistPage.ejs
@@ -10,6 +10,7 @@
    <link rel="stylesheet" href="styles/global.css">
    <link rel="stylesheet" href="styles/cartPage.css">
    <link rel="stylesheet" href="styles/wishlistPage.css">
+   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
    <script>
       const savedTheme = localStorage.getItem('theme') || 'light-mode';
       document.documentElement.classList.add(savedTheme);
