--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -9,6 +9,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="styles/global.css">
    <link rel="stylesheet" href="styles/profilePage.css">
+   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
    <script>
       const savedTheme = localStorage.getItem('theme') || 'light-mode';
       document.documentElement.classList.add(savedTheme);
@@ -84,7 +85,7 @@
                                  <div class="book-details">
                                     <p><strong>Title:</strong> <%= book.bookId.title %></p>
                                     <p><strong>Author:</strong> <%= book.bookId.author %></p>
-                                    <p><strong>Quantity:</strong> <%= book.bookId.quantity %></p>
+                                    <p><strong>Quantity:</strong> <%= book.quantity %></p>
                                     <p><strong>Price:</strong> $<%= book.bookId.price.toFixed(2) %></p>
                                  </div>
                               </li>
