--- a/public/styles/landingPage.css
+++ b/public/styles/landingPage.css
@@ -217,3 +217,33 @@ header ul {
 .dropdown-section button.active .icon {
    transform: rotate(-180deg);
 }
+
+.profile-button {
+   width: 4rem !important;
+   height: 4rem !important;
+}
+
+.profile-button > img {
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
+}
+
+li, ul {
+   position: relative;
+}
+
+.user-menu-popup {
+   top: 5rem;
+   right: -.5rem;
+}
+
+.user-menu-popup > a {
+   display: flex;
+   align-items: center;
+   gap: 1rem;
+}
+
+.search-result {
+   gap: 1rem;
+}
